--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,36 @@
-node_modules
-dist
+# Node / deps
+node_modules/
+.pnp
+.pnp.js
+npm-debug.log
+yarn-debug.log
+yarn-error.log
+
+# Build output
+dist/
+.next/
+build/
+out/
+
+# Vite / TS cache
+.vite/
+tsconfig.tsbuildinfo
+
+# Logs / temp
+*.log
 .DS_Store
-server/public
-vite.config.ts.*
-*.tar.gz
+Thumbs.db
+
+# Env / secrets
+.env
+.env.local
+.env.development.local
+
+# Replit / editor junk
+.replit
+replit.*
+.repl*
+
+# Misc large crap
+*.pnpm
+.pnpm.js
