Remove Vercel types to fix build

--- a/vercel.json
+++ b/vercel.json
@@ -12,5 +12,10 @@
       "src": "/(.*)",
       "dest": "/$1"
     }
-  ]
+  ],
+  "functions": {
+    "api/**/*.ts": {
+      "includeFiles": "dist/**"
+    }
+  }
 }
