--- a/railway.toml
+++ b/railway.toml
@@ -5,3 +5,7 @@ builder = "nixpacks"
 startCommand = "npm start"
 restartPolicyType = "on_failure"
 restartPolicyMaxRetries = 5
+
+[env]
+PORT = "3000"
+NODE_ENV = "production"
