Sleek black & white login - no bubbly colors

--- a/.env
+++ b/.env
@@ -4,6 +4,9 @@ DATABASE_URL="postgresql://neondb_owner:npg_aP8pxJqeC5nN@ep-hidden-frog-ahif63sc
 # Session Secret (generate a random string)
 SESSION_SECRET="curated-collective-secret-2026-night-circus-magic"
 
+# Veil (God Console) Access
+VEIL_WORD="Judy"
+
 # Replit Auth (if using Replit)
 REPL_ID="your-repl-id"
 
