--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,5 @@
 {
   "version": 2,
   "buildCommand": "npm run build",
-  "outputDirectory": "dist",
-  "env": {
-    "NODE_ENV": "production"
-  },
-  "functions": {
-    "dist/index.cjs": {
-      "maxDuration": 60
-    }
-  }
+  "outputDirectory": "dist"
 }
