--- a/fly.toml
+++ b/fly.toml
@@ -1,17 +1,23 @@
-app = "curated-collective"
-primary_region = "iad"
+# fly.toml app configuration file generated for curated-collective on 2026-01-30T07:55:25Z
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
+
+app = 'curated-collective'
+primary_region = 'iad'
 
 [build]
-  # Uncomment and set if you need a custom build command
-  # builder = "Dockerfile"
-
-[env]
-  NODE_ENV = "production"
 
 [http_service]
   internal_port = 8080
   force_https = true
-  auto_stop_machines = true
+  auto_stop_machines = 'stop'
   auto_start_machines = true
   min_machines_running = 0
-  processes = ["app"]
+  processes = ['app']
+
+[[vm]]
+  memory = '1gb'
+  cpu_kind = 'shared'
+  cpus = 1
+  memory_mb = 1024
