--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "db:push": "drizzle-kit push"
   },
   "dependencies": {
+    "@google-cloud/speech": "^7.2.1",
+    "@google-cloud/text-to-speech": "^6.4.0",
+    "@google-cloud/vision": "^5.3.4",
     "@hookform/resolvers": "^3.10.0",
     "@jridgewell/trace-mapping": "^0.3.25",
     "@radix-ui/react-accordion": "^1.2.4",
@@ -56,7 +59,7 @@
     "drizzle-orm": "^0.39.3",
     "drizzle-zod": "^0.7.1",
     "embla-carousel-react": "^8.6.0",
-    "express": "^4.21.2", 
+    "express": "^4.21.2",
     "express-session": "^1.18.2",
     "framer-motion": "^11.18.2",
     "input-otp": "^1.4.2",
@@ -64,7 +67,7 @@
     "memoizee": "^0.4.17",
     "memorystore": "^1.6.7",
     "next-themes": "^0.4.6",
-    "openai": "^6.15.0",
+    "openai": "^6.17.0",
     "openid-client": "^6.8.1",
     "p-limit": "^7.2.0",
     "p-retry": "^7.1.1",
@@ -106,8 +109,7 @@
     "autoprefixer": "^10.4.20",
     "cross-env": "^10.1.0",
     "drizzle-kit": "^0.31.8",
-    
-      "esbuild": "^0.25.12",
+    "esbuild": "^0.25.12",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.17",
     "tsx": "^4.20.5",
@@ -123,4 +125,3 @@
     "bufferutil": "^4.0.8"
   }
 }
- 
