--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "dev": "cross-env NODE_ENV=development tsx --env-file=.env server/index.ts",
     "build": "tsx script/build.ts",
     "start": "NODE_ENV=production node dist/index.cjs",
+    "start:dev": "tsx server/index.ts",
+    "create-session-table": "tsx scripts/create_session_table.ts",
+    "upsert-draco": "tsx scripts/upsert-draco.ts",
+    "upsert-aster": "tsx scripts/upsert-aster.ts",
     "check": "tsc",
     "db:push": "drizzle-kit push"
   },
