--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Database
-DATABASE_URL="postgresql://neondb_owner:npg_XZiFA1VxHJj2@ep-nameless-dawn-ah9acz6j-pooler.c-3.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require"
+DATABASE_URL="postgresql://neondb_owner:npg_XZiFA1VxHJj2@ep-nameless-dawn-ah9acz6j-pooler.c-3.us-east-1.aws.neon.tech/neondb?sslmode=require"
 
 # Session Secret (generate a random string)
 SESSION_SECRET="curated-collective-secret-2026-night-circus-magic"
